Fix: Extension Overlap on Market Pages (#306)
* Add tooltips to stickers

* fix: extension overlaps

* Remove async modifier

* Extract sticker container into Lit Element

* Revert sticker container changes

* Rework as decorator

* Add comments to the decorators

* Simplify decorator implementation

* Rename functions

* Add ConflictingExtension

* chore: run format

* Rework Sticker Container with Lit (Market Pages) (#307)

* Remove code from #303

* chore: run format

* Add back #303

* Add back new sticker container changes

* improve naming conventions

--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,3 @@
-.csfloat-stickers-container {
-    float: right;
-}
-
 .csfloat-easy-inspect {
     position: absolute;
     height: 74px;
